<resources>
    <string name="app_name">Rowdy Quiz</string>
    <string name="design_txt">lorem ipsum</string>
    <string name="btn_true">True</string>
    <string name="btn_false">False</string>
    <string name="btn_next">Next</string>
    <string name="btn_peek">Peek</string>
    <string name="btn_show_answer">Show Answer</string>
    <string name="confirm_msg">Are you sure you want to do this ?</string>
    <string name="the_answer">The answer is:</string>
    <string name="btn_back">Back</string>
</resources>