<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/UTSA_Blue_Dark"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rowdylogo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/app_name"
            android:textColor="@color/UTSA_Orange"
            android:textSize="28sp"
            android:layout_marginTop="-20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_question"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:text="@string/design_txt"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="30dp"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:paddingVertical="24dp">

            <androidx.appcompat.widget.AppCompatButton
                android:textAllCaps="false"
                android:textSize="12sp"
                android:id="@+id/btn_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:text="@string/btn_true"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_button"
                android:textColor="@color/white"
                android:stateListAnimator="@animator/button_scale"/>

            <androidx.appcompat.widget.AppCompatButton
                android:textAllCaps="false"
                android:textSize="12sp"
                android:id="@+id/btn_false"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:padding="24dp"
                android:stateListAnimator="@animator/button_scale"
                android:text="@string/btn_false"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:padding="24dp"
            android:text="@string/btn_next"
            android:stateListAnimator="@animator/button_scale"/>

        <androidx.appcompat.widget.AppCompatButton
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:id="@+id/btn_peek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="20dp"
            android:padding="24dp"
            android:text="@string/btn_peek"
            android:stateListAnimator="@animator/button_scale"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>