<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/UTSA_Blue_Dark"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rowdylogo"/>

        <TextView
            android:id="@+id/txt_question"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:text="@string/confirm_msg"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="30dp"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/txt_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_answer"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="24dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:id="@+id/btn_show_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:padding="24dp"
            android:text="@string/btn_show_answer"
            android:stateListAnimator="@animator/button_scale"/>

        <androidx.appcompat.widget.AppCompatButton
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:padding="24dp"
            android:text="@string/btn_back"
            android:layout_marginTop="20dp"
            android:stateListAnimator="@animator/button_scale"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>